--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -1,18 +1,20 @@
 {{define "header"}}
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Music Companion</title>
 
-		<link href="/static/css/output.css" rel="stylesheet">
-	</head>
-	<body>
+<head>
+	<meta charset="UTF-8">
+	<title>Music Companion</title>
+
+	<script src="https://unpkg.com/htmx.org@1.9.8"></script>
+	<link href="/static/css/output.css" rel="stylesheet">
+</head>
+
+<body>
 {{end}}
-
 
 {{define "footer"}}
-	</body>
-	</html>
-{{end}}
+</body>
 
+</html>
+{{end}}
