--- a/tmpl/intervals.html
+++ b/tmpl/intervals.html
@@ -1,24 +1,32 @@
 {{template "header"}}
 
-<div class="test p-3">
-	<form action="/intervals" method="POST">
-		<label for="pitch1" class="block text-sm font-medium leading-6 text-gray-900">Pitch 1</label>
-		<div class="relative mt-2 rounded-md shadow-sm">
-			<input type="text" name="pitch1" placeholder="Note 1"
-				class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-			<input type="text" name="pitch2" placeholder="Note 2">
+<div class="container max-w-fit mx-auto">
+	<div class="my-3 px-16 bg-slate-800 shadow-xl rounded-lg">
 
-			<input type="submit" value="Get interval">
-		</div>
-	</form>
+		<h1 class="h-10 text-lg pl-6 pt-6">Interval finder</h1>
+		<form class="p-6" hx-post="/intervals" hx-swap="outerHTML" hx-target="#result">
+			<div class="flex space-x-4 mb-3">
+				<input class="text-input" id="pitch1" type="text" name="pitch1" placeholder="Note 1">
+				<input class="text-input" id="pitch2" type="text" name="pitch2" placeholder="Note 2">
+			</div>
+
+			<button class="btn-primary" type="submit">
+				Get interval
+			</button>
+		</form>
+	</div>
+
+	<div id="result"></div>
+
 </div>
 
-
-<input type="checkbox" class="ml-10 form-checkbox rounded text-pink-500" />
-
-
-{{if .}}
-Interval: {{.}}
-{{end}}
-
 {{template "footer"}}
+
+{{define "intervalResult"}}
+<div id="result" class="h-12 pl-6 rounded-lg shadow-xl bg-slate-400 text-gray-800">
+	<div class="flex h-full w-fit">
+		<span class="my-auto mr-1">Answer:</span>
+		<div class="my-auto">{{.}}</div>
+	</div>
+</div>
+{{end}}
