Changes wording of interval result text

--- a/tmpl/intervals.html
+++ b/tmpl/intervals.html
@@ -25,7 +25,7 @@
 {{define "intervalResult"}}
 <div id="result" class="h-12 pl-6 rounded-lg shadow-xl bg-slate-400 text-gray-800">
 	<div class="flex h-full w-fit">
-		<span class="my-auto mr-1">Answer:</span>
+		<span class="my-auto mr-1">Interval:</span>
 		<div class="my-auto">{{.}}</div>
 	</div>
 </div>
