--- a/tmpl/intervals.html
+++ b/tmpl/intervals.html
@@ -1,9 +1,9 @@
 {{template "header"}}
 
 <div class="container max-w-fit mx-auto">
-	<div class="my-3 px-16 bg-slate-800 shadow-xl rounded-lg">
+	<div class="my-3 px-16 bg-slate-700 shadow-xl rounded-lg">
 
-		<h1 class="h-10 text-lg pl-6 pt-6">Interval finder</h1>
+		<h1 class="h-10 text-slate-100 text-lg pl-6 pt-6">Interval Calculator</h1>
 		<form class="p-6" hx-post="/intervals" hx-swap="outerHTML" hx-target="#result">
 			<div class="flex space-x-4 mb-3">
 				<input class="text-input" id="pitch1" type="text" name="pitch1" placeholder="Note 1">
