--- a/tmpl/intervals.html
+++ b/tmpl/intervals.html
@@ -1,7 +1,7 @@
 {{template "header"}}
 
 <div class="container max-w-fit mx-auto">
-	<div class="my-3 px-16 bg-slate-700 shadow-xl rounded-lg">
+	<div class="my-3 px-12 bg-slate-700 shadow-xl rounded-lg">
 
 		<h1 class="h-10 text-slate-100 text-lg pl-6 pt-6">Interval Calculator</h1>
 		<form class="p-6" hx-post="/intervals" hx-swap="outerHTML" hx-target="#result">
@@ -23,10 +23,9 @@
 {{template "footer"}}
 
 {{define "intervalResult"}}
-<div id="result" class="h-12 pl-6 rounded-lg shadow-xl bg-slate-400 text-gray-800">
+<div id="result" class="h-12 pl-6 rounded-lg shadow-xl bg-slate-300 text-gray-800">
 	<div class="flex h-full w-fit">
-		<span class="my-auto mr-1">Interval:</span>
-		<div class="my-auto">{{.}}</div>
+		<div class="pl-12 my-auto font-bold">({{.Distance}}) {{.String}}</div>
 	</div>
 </div>
 {{end}}
