--- a/tmpl/intervals.html
+++ b/tmpl/intervals.html
@@ -6,8 +6,17 @@
 		<h1 class="h-10 text-slate-100 text-lg pl-6 pt-6">Interval Calculator</h1>
 		<form class="p-6" hx-post="/intervals" hx-swap="outerHTML" hx-target="#result">
 			<div class="flex space-x-4 mb-3">
-				<input class="text-input" id="pitch1" type="text" name="pitch1" placeholder="Note 1">
-				<input class="text-input" id="pitch2" type="text" name="pitch2" placeholder="Note 2">
+				{{range .}}
+					{{template "noteInput" .}}
+				{{end}}
+				<!-- <div hx-target="this" hx-swap="outerHTML">
+					<input class="text-input" id="pitch1" type="text" name="pitch1" placeholder="Note 1"
+						hx-post="/validateNote/pitch1" hx-trigger="change" hx-sync="closest form:drop">
+				</div>
+				<div hx-target="this" hx-swap="outerHTML">
+					<input class="text-input" id="pitch2" type="text" name="pitch2" placeholder="Note 2"
+						hx-post="/validateNote/pitch2" hx-trigger="change" hx-sync="closest form:drop">
+				</div> -->
 			</div>
 
 			<button class="btn-primary" type="submit">
@@ -20,7 +29,19 @@
 
 </div>
 
-{{template "footer"}}
+{{define "noteInput"}}
+<div hx-target="this" hx-swap="outerHTML">
+	<input class="text-input" id="pitch{{.WhichPitch}}" type="text" name="pitch{{.WhichPitch}}" placeholder="Note {{.WhichPitch}}"
+		hx-post="/validateNote/pitch{{.WhichPitch}}" hx-trigger="change" hx-sync="closest form:drop" value="{{.Value}}">
+</div>
+{{end}}
+{{define "invalidateNote"}}
+<div hx-target="this" hx-swap="outerHTML">
+	<input class="text-input ring-1 ring-red-600" id="pitch{{.WhichPitch}}" type="text" name="pitch{{.WhichPitch}}" value="{{.Value}}"
+		placeholder="Note {{.WhichPitch}}" hx-post="/validateNote/pitch{{.WhichPitch}}" hx-trigger="change" hx-sync="closest form:drop">
+	<p class="block text-red-600">{{.Error}}</p>
+</div>
+{{end}}
 
 {{define "intervalResult"}}
 <div id="result" class="h-12 pl-6 rounded-lg shadow-xl bg-slate-300 text-gray-800">
@@ -29,3 +50,6 @@
 	</div>
 </div>
 {{end}}
+
+{{template "footer"}}
+
