Adds last entered interval search to the intervals page

--- a/tmpl/intervals.html
+++ b/tmpl/intervals.html
@@ -4,11 +4,28 @@
 	<div class="my-3 px-12 bg-slate-700 shadow-xl rounded-lg">
 
 		<h1 class="h-10 text-slate-100 text-lg pl-6 pt-6">Interval Calculator</h1>
-		<form class="p-6" hx-post="/intervals" hx-swap="outerHTML" hx-target="#result">
+		<form class="p-6" hx-post="/intervals" hx-swap="innerHTML" hx-target="#results">
 			<div class="flex space-x-4 mb-3">
 				{{range .}}
-					{{template "noteInput" .}}
+				{{template "noteInput" .}}
 				{{end}}
+
+				{{define "noteInput"}}
+				<div hx-target="this" hx-swap="outerHTML">
+					<input class="text-input" id="pitch{{.WhichPitch}}" type="text" name="pitch{{.WhichPitch}}"
+						placeholder="Note {{.WhichPitch}}" hx-post="/validateNote/pitch{{.WhichPitch}}"
+						hx-trigger="change" hx-sync="closest form:drop" value="{{.Value}}">
+				</div>
+				{{end}}
+				{{define "invalidNote"}}
+				<div hx-target="this" hx-swap="outerHTML">
+					<input class="text-input ring-1 ring-red-600" id="pitch{{.WhichPitch}}" type="text"
+						name="pitch{{.WhichPitch}}" value="{{.Value}}" placeholder="Note {{.WhichPitch}}"
+						hx-post="/validateNote/pitch{{.WhichPitch}}" hx-trigger="change" hx-sync="closest form:drop">
+					<p class="block text-red-600">{{.Error}}</p>
+				</div>
+				{{end}}
+
 			</div>
 
 			<button class="btn-primary" type="submit">
@@ -17,31 +34,21 @@
 		</form>
 	</div>
 
-	<div id="result"></div>
-
-</div>
-
-{{define "noteInput"}}
-<div hx-target="this" hx-swap="outerHTML">
-	<input class="text-input" id="pitch{{.WhichPitch}}" type="text" name="pitch{{.WhichPitch}}" placeholder="Note {{.WhichPitch}}"
-		hx-post="/validateNote/pitch{{.WhichPitch}}" hx-trigger="change" hx-sync="closest form:drop" value="{{.Value}}">
-</div>
-{{end}}
-{{define "invalidateNote"}}
-<div hx-target="this" hx-swap="outerHTML">
-	<input class="text-input ring-1 ring-red-600" id="pitch{{.WhichPitch}}" type="text" name="pitch{{.WhichPitch}}" value="{{.Value}}"
-		placeholder="Note {{.WhichPitch}}" hx-post="/validateNote/pitch{{.WhichPitch}}" hx-trigger="change" hx-sync="closest form:drop">
-	<p class="block text-red-600">{{.Error}}</p>
-</div>
-{{end}}
-
-{{define "intervalResult"}}
-<div id="result" class="h-12 pl-6 rounded-lg shadow-xl bg-slate-300 text-gray-800">
-	<div class="flex h-full w-fit">
-		<div class="pl-12 my-auto font-bold">({{.Distance}}) {{.String}}</div>
+	<div id="results">
+		{{define "intervalResult"}}
+		{{range .}}
+		{{$length := len .}}
+		{{if ne $length 0}}
+		<div class="h-12 pl-6 mb-3 rounded-lg shadow-xl bg-slate-300 text-gray-800">
+			<div class="flex h-full w-fit">
+				<div class="pl-12 my-auto font-bold">{{.}}</div>
+			</div>
+		</div>
+		{{end}}
+		{{end}}
+		{{end}}
 	</div>
+
 </div>
-{{end}}
 
 {{template "footer"}}
-
