Comment out advanced switch

--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -8,12 +8,13 @@
 
 	<script src="https://unpkg.com/htmx.org@1.9.8"></script>
 	<link href="/static/css/output.css" rel="stylesheet">
+	<script type="module" src="/static/js/index.js"></script>
 </head>
 
 <body>
-{{end}}
+	{{end}}
 
-{{define "footer"}}
+	{{define "footer"}}
 </body>
 
 </html>
