--- a/tmpl/intervals.html
+++ b/tmpl/intervals.html
@@ -1,4 +1,4 @@
-{{template "header"}}
+{{ template "header" }}
 
 <div class="container w-1/2 mx-auto">
 
@@ -9,7 +9,7 @@
 				<span class="mr-1 select-none text-slate-300 text-sm font-medium">Advanced</span>
 
 				<input id="advanced" name="advanced" type="checkbox" class="sr-only peer"
-					hx-POST="/intervalsOctaveModeToggle" hx-trigger="change" hx-target="#inputs">
+					hx-POST="/intervals/octaveModeToggle" hx-trigger="change" hx-target="#inputs">
 
 				<div class="relative bg-slate-600 w-10 h-5 rounded-full peer peer-checked:bg-sky-600 transiation duration-200
 
@@ -20,10 +20,10 @@
 		</div>
 
 		<div class="container w-fit mx-auto">
-			<h1 class="h-10 text-slate-100 text-lg pl-6 pt-6">Interval Calculator</h1>
+			<h1 class="h-10 text-slate-100 text-lg pl-6 pt-6">Interval Between Notes</h1>
 			<form class="p-6" hx-post="/intervals" hx-swap="innerHTML" hx-target="#results">
 				<div id="inputs" class="flex space-x-3 mb-3">
-					{{template "intervalsBasic" .}}
+					{{ template "intervalsBasic" . }}
 				</div>
 
 				<button class="btn-primary" type="submit">
@@ -34,18 +34,18 @@
 	</div>
 
 	<div id="results">
-		{{define "intervalResult"}}
-		{{range .}}
-		{{$length := len .}}
-		{{if ne $length 0}}
+		{{ define "intervalResult" }}
+		{{ range . }}
+		{{ $length := len . }}
+		{{ if ne $length 0 }}
 		<div class="h-12 pl-6 mb-3 rounded-lg shadow-xl bg-slate-300 text-gray-800 justify-items-center w-full">
 			<div class="flex h-full w-fit">
-				<div class="pl-12 my-auto font-bold">{{.}}</div>
+				<div class="pl-12 my-auto font-bold">{{ . }}</div>
 			</div>
 		</div>
-		{{end}}
-		{{end}}
-		{{end}}
+		{{ end }}
+		{{ end }}
+		{{ end }}
 	</div>
 
 </div>
@@ -55,14 +55,14 @@
 	<div class="my-3 bg-slate-700 shadow-xl rounded-lg">
 
 		<div class="container w-fit mx-auto">
-			<h1 class="h-10 text-slate-100 text-lg pl-6 pt-6">Get note at interval</h1>
+			<h1 class="h-10 text-slate-100 text-lg pl-6 pt-6">Note from interval</h1>
 			<form class="p-6" hx-post="/intervals" hx-swap="innerHTML" hx-target="#results">
 				<div id="inputs" class="flex space-x-3 mb-3">
-					{{template "basicNoteInput" index . 0}}
+					{{ template "basicNoteInput" index . 0 }}
 				</div>
 
 				<button class="btn-primary" type="submit">
-					Get interval
+					Get note
 				</button>
 			</form>
 		</div>
@@ -72,71 +72,87 @@
 
 </div>
 
-{{template "footer"}}
+{{ template "footer" }}
 
-{{define "intervalsBasic"}}
-{{template "basicNoteInput" index . 0}}
-{{template "basicNoteInput" index . 1}}
-{{end}}
+<!-- === Interval Betweeen Notes === -->
+{{ define "intervalsBasic" }}
+{{ template "basicNoteInput" index . 0 }}
+{{ template "basicNoteInput" index . 1 }}
+{{ end }}
 
-{{define "intervalsAdvanced"}}
+{{ define "intervalsAdvanced" }}
 <div class="flex">
-	{{template "advancedNoteInput" index . 0 0}}
-	{{template "octaveInput" index . 1 0}}
+	{{ template "advancedNoteInput" index . 0 0 }}
+	{{ template "octaveInput" index . 1 0 }}
 </div>
 
 <div class="flex">
-	{{template "advancedNoteInput" index . 0 1}}
-	{{template "octaveInput" index . 1 1}}
+	{{ template "advancedNoteInput" index . 0 1 }}
+	{{ template "octaveInput" index . 1 1 }}
 </div>
-{{end}}
+{{ end }}
 
-{{define "basicNoteInput"}}
+{{ define "basicNoteInput" }}
 <div hx-target="this" hx-swap="outerHTML">
-	<input class="text-gray-800 p-1 rounded-md w-24 text-sm bg-slate-200 shadow-sm" id="pitch{{.Id}}" type="text"
-		name="pitch{{.Id}}" placeholder="Note {{.Id}}" hx-post="/intervalsValidation/pitch{{.Id}}" hx-trigger="change"
-		hx-sync="closest form:drop" value="{{.Value}}">
+	<input class="text-gray-800 p-1 rounded-md w-24 text-sm bg-slate-200 shadow-sm" id="pitch{{ .Id }}" type="text"
+		name="pitch{{ .Id }}" placeholder="Note {{ .Id }}" hx-post="/intervals/validation/pitch{{ .Id }}"
+		hx-trigger="change" hx-sync="closest form:drop"
+		value="{{ .Value }}">
 </div>
-{{end}}
-{{define "invalidBasicNoteInput"}}
+{{ end }}
+{{ define "invalidBasicNoteInput" }}
 <div hx-target="this" hx-swap="outerHTML">
 	<input class="text-gray-800 p-1 rounded-md w-24 text-sm bg-slate-200 shadow-sm ring-1 ring-red-600"
-		id="pitch{{.Id}}" type="text" name="pitch{{.Id}}" value="{{.Value}}" placeholder="Note {{.Id}}"
-		hx-post="/intervalsValidation/pitch{{.Id}}" hx-trigger="change" hx-sync="closest form:drop">
-	<p class="block text-red-600">{{.Error}}</p>
+		id="pitch{{ .Id }}" type="text" name="pitch{{ .Id }}" value="{{ .Value }}" placeholder="Note {{ .Id }}"
+		hx-post="/intervals/validation/pitch{{ .Id }}" hx-trigger="change" hx-sync="closest form:drop">
+	<p class="block text-red-600">{{ .Error }}</p>
 </div>
-{{end}}
+{{ end }}
 
-{{define "advancedNoteInput"}}
+{{ define "advancedNoteInput" }}
 <div hx-target="this" hx-swap="outerHTML">
-	<input class="text-gray-800 p-1 rounded-l-md w-24 text-sm bg-slate-200 shadow-sm" id="pitch{{.Id}}" type="text"
-		name="pitch{{.Id}}" placeholder="Note {{.Id}}" hx-post="/intervalsValidation/pitch{{.Id}}" hx-trigger="change"
-		hx-sync="closest form:drop" value="{{.Value}}">
+	<input class="text-gray-800 p-1 rounded-l-md w-24 text-sm bg-slate-200 shadow-sm" id="pitch{{ .Id }}" type="text"
+		name="pitch{{ .Id }}" placeholder="Note {{ .Id }}" hx-post="/intervals/validation/pitch{{ .Id }}"
+		hx-trigger="change" hx-sync="closest form:drop" value="{{ .Value }}">
 </div>
-{{end}}
-{{define "octaveInput"}}
-<div hx-target="this" hx-swap="outerHTML">
-	<input class="p-1 w-10 grow items-center outline-none rounded-r-md text-sm bg-slate-200 shadow-sm"
-		id="octave{{.Id}}" type="number" name="octave{{.Id}}" placeholder="0"
-		hx-post="/intervalsValidation/octave{{.Id}}" hx-trigger="change" hx-sync="closest form:drop" value="{{.Value}}">
-</div>
-{{end}}
-{{define "invalidAdvancedNoteInput"}}
+{{ end }}
+{{ define "invalidAdvancedNoteInput" }}
 <div hx-target="this" hx-swap="outerHTML">
 	<input class="text-gray-800 p-1 rounded-l-md w-24 text-sm bg-slate-200 shadow-sm ring-1 ring-red-600"
-		id="pitch{{.Id}}" type="text" name="pitch{{.Id}}" value="{{.Value}}" placeholder="Note {{.Id}}"
-		hx-post="/intervalsValidation/pitch{{.Id}}" hx-trigger="change" hx-sync="closest form:drop">
-	<p class="block text-red-600">{{.Error}}</p>
+		id="pitch{{ .Id }}" type="text" name="pitch{{ .Id }}" value="{{ .Value }}" placeholder="Note {{ .Id }}"
+		hx-post="/intervals/validation/pitch{{ .Id }}" hx-trigger="change" hx-sync="closest form:drop">
+	<p class="block text-red-600">{{ .Error }}</p>
 </div>
-{{end}}
-{{define "invalidOctave"}}
+{{ end }}
+
+{{ define "octaveInput" }}
+<div hx-target="this" hx-swap="outerHTML">
+	<input class="p-1 w-10 grow items-center outline-none rounded-r-md text-sm bg-slate-200 shadow-sm"
+		id="octave{{ .Id }}" type="number" name="octave{{ .Id }}" placeholder="0"
+		hx-post="/intervals/validation/octave{{ .Id }}" hx-trigger="change" hx-sync="closest form:drop"
+		value="{{ .Value }}">
+</div>
+{{ end }}
+{{ define "invalidOctave" }}
 <div hx-target="this" hx-swap="outerHTML">
 	<input
 		class="p-1 w-10 grow items-center outline-none rounded-r-md text-sm bg-slate-200 shadow-sm ring-1 ring-red-600"
-		id="octave{{.Id}}" type="number" name="octave{{.Id}}" placeholder="0"
-		hx-post="/intervalsValidation/octave{{.Id}}" hx-trigger="change" hx-sync="closest form:drop" value="{{.Value}}">
-	<p class="block text-red-600">{{.Error}}</p>
+		id="octave{{ .Id }}" type="number" name="octave{{ .Id }}" placeholder="0"
+		hx-post="/intervals/validation/octave{{ .Id }}" hx-trigger="change" hx-sync="closest form:drop"
+		value="{{ .Value }}">
+	<p class="block text-red-600">{{ .Error }}</p>
 </div>
-{{end}}
+{{ end }}
+<!-- =========================== -->
+
+<!-- === Interval from Note === -->
+{{ define "noteInput" }}
+<div hx-target="this" hx-swap="outerHTML">
+	<input class="text-gray-800 p-1 rounded-md w-24 text-sm bg-slate-200 shadow-sm" id="pitch{{ .Id }}" type="text"
+		name="pitch{{ .Id }}" placeholder="Note {{ .Id }}" hx-post="/intervals/validation/pitch{{ .Id }}"
+		hx-trigger="change" hx-sync="closest form:drop" value="{{ .Value }}">
+</div>
+{{ end }}
+<!-- =========================== -->
 
 <script src="/static/js/intervals.js"></script>
