Refactor note to pitch and pitch to note
Adds result struct type

--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -9,6 +9,7 @@
 	<script src="https://unpkg.com/htmx.org@1.9.8"></script>
 	<link href="/static/css/output.css" rel="stylesheet">
 	<script type="module" src="/static/js/index.js"></script>
+	<script src="https://kit.fontawesome.com/37b14f38f4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
