--- a/tmpl/intervals.html
+++ b/tmpl/intervals.html
@@ -36,15 +36,13 @@
 	<div id="results">
 		{{ define "intervalResult" }}
 		{{ range . }}
-		{{ $length := len . }}
-		{{ if ne $length 0 }}
 		<div class="h-12 pl-6 mb-3 rounded-lg shadow-xl bg-slate-300 text-gray-800 justify-items-center w-full">
 			<div class="flex h-full w-fit">
-				<div class="pl-12 my-auto font-bold">{{ . }}</div>
+				<div class="pl-12 my-auto font-bold">({{.Distance}}) {{.IntervalName}} {{.Note1}} <i
+						class="fa-solid fa-arrow-right"></i> {{.Note2}}</div>
 			</div>
 		</div>
-		{{ end }}
-		{{ end }}
+		{{end}}
 		{{ end }}
 	</div>
 
@@ -94,33 +92,32 @@
 
 {{ define "basicNoteInput" }}
 <div hx-target="this" hx-swap="outerHTML">
-	<input class="text-gray-800 p-1 rounded-md w-24 text-sm bg-slate-200 shadow-sm" id="pitch{{ .Id }}" type="text"
-		name="pitch{{ .Id }}" placeholder="Note {{ .Id }}" hx-post="/intervals/validation/pitch{{ .Id }}"
-		hx-trigger="change" hx-sync="closest form:drop"
-		value="{{ .Value }}">
+	<input class="text-gray-800 p-1 rounded-md w-24 text-sm bg-slate-200 shadow-sm" id="note{{ .Id }}" type="text"
+		name="note{{ .Id }}" placeholder="Note {{ .Id }}" hx-post="/intervals/validation/note{{ .Id }}"
+		hx-trigger="change" hx-sync="closest form:drop" value="{{ .Value }}">
 </div>
 {{ end }}
 {{ define "invalidBasicNoteInput" }}
 <div hx-target="this" hx-swap="outerHTML">
 	<input class="text-gray-800 p-1 rounded-md w-24 text-sm bg-slate-200 shadow-sm ring-1 ring-red-600"
-		id="pitch{{ .Id }}" type="text" name="pitch{{ .Id }}" value="{{ .Value }}" placeholder="Note {{ .Id }}"
-		hx-post="/intervals/validation/pitch{{ .Id }}" hx-trigger="change" hx-sync="closest form:drop">
+		id="note{{ .Id }}" type="text" name="note{{ .Id }}" value="{{ .Value }}" placeholder="Note {{ .Id }}"
+		hx-post="/intervals/validation/note{{ .Id }}" hx-trigger="change" hx-sync="closest form:drop">
 	<p class="block text-red-600">{{ .Error }}</p>
 </div>
 {{ end }}
 
 {{ define "advancedNoteInput" }}
 <div hx-target="this" hx-swap="outerHTML">
-	<input class="text-gray-800 p-1 rounded-l-md w-24 text-sm bg-slate-200 shadow-sm" id="pitch{{ .Id }}" type="text"
-		name="pitch{{ .Id }}" placeholder="Note {{ .Id }}" hx-post="/intervals/validation/pitch{{ .Id }}"
+	<input class="text-gray-800 p-1 rounded-l-md w-24 text-sm bg-slate-200 shadow-sm" id="note{{ .Id }}" type="text"
+		name="note{{ .Id }}" placeholder="Note {{ .Id }}" hx-post="/intervals/validation/note{{ .Id }}"
 		hx-trigger="change" hx-sync="closest form:drop" value="{{ .Value }}">
 </div>
 {{ end }}
 {{ define "invalidAdvancedNoteInput" }}
 <div hx-target="this" hx-swap="outerHTML">
 	<input class="text-gray-800 p-1 rounded-l-md w-24 text-sm bg-slate-200 shadow-sm ring-1 ring-red-600"
-		id="pitch{{ .Id }}" type="text" name="pitch{{ .Id }}" value="{{ .Value }}" placeholder="Note {{ .Id }}"
-		hx-post="/intervals/validation/pitch{{ .Id }}" hx-trigger="change" hx-sync="closest form:drop">
+		id="note{{ .Id }}" type="text" name="note{{ .Id }}" value="{{ .Value }}" placeholder="Note {{ .Id }}"
+		hx-post="/intervals/validation/note{{ .Id }}" hx-trigger="change" hx-sync="closest form:drop">
 	<p class="block text-red-600">{{ .Error }}</p>
 </div>
 {{ end }}
@@ -148,8 +145,8 @@
 <!-- === Interval from Note === -->
 {{ define "noteInput" }}
 <div hx-target="this" hx-swap="outerHTML">
-	<input class="text-gray-800 p-1 rounded-md w-24 text-sm bg-slate-200 shadow-sm" id="pitch{{ .Id }}" type="text"
-		name="pitch{{ .Id }}" placeholder="Note {{ .Id }}" hx-post="/intervals/validation/pitch{{ .Id }}"
+	<input class="text-gray-800 p-1 rounded-md w-24 text-sm bg-slate-200 shadow-sm" id="note{{ .Id }}" type="text"
+		name="note{{ .Id }}" placeholder="Note {{ .Id }}" hx-post="/intervals/validation/note{{ .Id }}"
 		hx-trigger="change" hx-sync="closest form:drop" value="{{ .Value }}">
 </div>
 {{ end }}
