--- a/tmpl/intervals.html
+++ b/tmpl/intervals.html
@@ -35,20 +35,18 @@
 
 	<div id="results">
 		{{ define "intervalResult" }}
-		{{ range . }}
 		<div class="h-12 pl-6 mb-3 rounded-lg shadow-xl bg-slate-300 text-gray-800 justify-items-center w-full">
 			<div class="flex h-full w-fit">
-				<div class="pl-12 my-auto font-bold">({{.Distance}}) {{.IntervalName}} {{.Note1}} <i
-						class="fa-solid fa-arrow-right"></i> {{.Note2}}</div>
+				<div class="pl-12 my-auto font-bold">({{ .Distance }}) {{ .IntervalName }} {{ .Note1 }} <i
+						class="fa-solid fa-arrow-right"></i> {{ .Note2 }}</div>
 			</div>
 		</div>
-		{{end}}
 		{{ end }}
 	</div>
 
 </div>
 
-<div class="container w-1/2 mx-auto">
+<!-- <div class="container w-1/2 mx-auto">
 
 	<div class="my-3 bg-slate-700 shadow-xl rounded-lg">
 
@@ -56,7 +54,7 @@
 			<h1 class="h-10 text-slate-100 text-lg pl-6 pt-6">Note from interval</h1>
 			<form class="p-6" hx-post="/intervals" hx-swap="innerHTML" hx-target="#results">
 				<div id="inputs" class="flex space-x-3 mb-3">
-					{{ template "basicNoteInput" index . 0 }}
+					{{/* template "basicNoteInput" index . 0 */}}
 				</div>
 
 				<button class="btn-primary" type="submit">
@@ -68,7 +66,7 @@
 
 	<div id="results"></div>
 
-</div>
+</div>-->
 
 {{ template "footer" }}
 
