Interval from note changes

--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -6,10 +6,11 @@
 	<meta charset="UTF-8">
 	<title>Music Companion</title>
 
-	<script src="https://unpkg.com/htmx.org@1.9.8"></script>
+	<script src="/static/js/htmx.min.js"></script>
+	<script defer src="/static/js/alpine.min.js"></script>
 	<link href="/static/css/output.css" rel="stylesheet">
-	<script type="module" src="/static/js/index.js"></script>
 	<script src="https://kit.fontawesome.com/37b14f38f4.js" crossorigin="anonymous"></script>
+	<script type="module" src="/static/js/index.js"></script>
 </head>
 
 <body>
