Rename all instances of 'companion' to 'guide'

--- a/tmpl/home.html
+++ b/tmpl/home.html
@@ -1,7 +1,7 @@
 {{template "header"}}
 
 <h1 class="text-3xl font-bold underline">
-	Music companion
+	Music Guide
 </h1>
 <p>Basic app to learn and practice music theory.</p>
 
