--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Music Companion</title>
+	<title>Music Guide</title>
 
 	<script src="https://unpkg.com/htmx.org@1.9.8"></script>
 	<link href="/static/css/output.css" rel="stylesheet">
